To fix the overflow of the "t" I need 6px padding, not 8px

--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ a:hover {
 
 .nbmenu li {
   text-align: left;
-  padding: 8px;
+  padding: 6px;
   max-width: 300px;
   overflow: hidden;
 }
